tests/backpack/should_fail/bkpfail37.bkp
unit p where
    signature A where
        infixr 6 `op`
        op :: Int -> Int -> Int
unit q where
    module A where
        infixr 4 `op`
        op :: Int -> Int -> Int
        op = (+)
unit r where
    dependency p[A=q:A]
